@@ -8,6 +8,7 @@ SettingsDialog::SettingsDialog(const Settings& settings, QWidget *parent) :
 {
     ui->setupUi(this);
     ui->systemDisks->setChecked(settings.showSystemDisks);
+    ui->autoMount->setChecked(settings.mountAutomaticaly);
 
     ui->deviceNotify->setChecked(settings.deviceNotifications);
     ui->mountNotify->setChecked(settings.mountNotifications);
@@ -22,6 +23,7 @@ Settings SettingsDialog::getSettings()
 {
     Settings settings;
     settings.showSystemDisks = ui->systemDisks->isChecked();
+    settings.mountAutomaticaly = ui->autoMount->isChecked();
     settings.deviceNotifications = ui->deviceNotify->isChecked();
     settings.mountNotifications = ui->deviceNotify->isChecked();
     return settings;
