@@ -19,7 +19,7 @@
 
 TEMPLATE = app
 TARGET = tinymount
-VERSION = 0.1.96
+VERSION = 0.1.97
 
 DEPENDPATH += .
 INCLUDEPATH += .
